--- a/Sistemas_de_Big Data/Unidad5_Monitorizacion/monitoring-lab/docker-compose.yml
+++ b/Sistemas_de_Big Data/Unidad5_Monitorizacion/monitoring-lab/docker-compose.yml
@@ -54,6 +54,19 @@ services:
     networks:
       - monitoring
     restart: unless-stopped
+    image: prom/node-exporter:latest
+    container_name: node_exporter
+    command:
+      - '--path.rootfs=/host'
+      - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
+    pid: host
+    volumes:
+      - '/:/host:ro,rslave'
+    ports:
+      - "9100:9100"
+    networks:
+      - monitoring
+    restart: unless-stopped
 
   # cAdvisor: métricas de contenedores Docker
   cadvisor:
